Fix app download banner spacing

--- a/packages/shared-component--app/src/app-download.pcss
+++ b/packages/shared-component--app/src/app-download.pcss
@@ -59,7 +59,7 @@
 .coop-c-app-download__body {
   max-width: 90%;
 
-  :last-child {
+  & :last-child {
     margin-bottom: 0;
   }
 
@@ -73,7 +73,8 @@
 }
 
 .coop-c-app-download__title {
-  margin-bottom: var(--spacing-24);
+  margin: 0 0 var(--spacing-24);
+  padding: 0;
 }
 
 .coop-c-app-download__btns {
